tests/errors/raise_wrong_type.dang
# raise requires a String! or Error!, not an Int
let result = raise 42
